<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motive_ros_foxy_sandbox</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="toshiyuki67026@gmail.com">Toshiyuki Oshima</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
